# XTrading-models

./: CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/xtrading_models/: __init__.py  bar.py  execution_result.py  fill.py  order.py  time_provider.py  trade.py
tests/: test_bar.py  test_fill.py  test_models.py
