[project]
name = "xtrading-models"
version = "0.5.0"
description = "Shared trading models for XTrading ecosystem"
authors = [{name = "Yanir Taflev", email = "yanirta+xtrading@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
keywords = ["trading", "models", "finance", "algotrading", "backtesting"]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
